Added the unadjusted close back

--- a/01_introduction.ipynb
+++ b/01_introduction.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "The goal is to create a financial database of 1-minute OHLCV data from 2004 and beyond, delisted or listed, for common stocks and ADR common stocks. I use Polygon for price data, which is \"ticker-centric\". All data from Polygon is point-in-time by ticker. This means we have to take care of renamings ourselves. Some vendors already do renamings (e.g. Tiingo). And almost all of the vendors that do renamings have a small bit of survivorship-bias, because when a ticker is re-used they do not have them.\n",
     "\n",
-    "I will also make sure that it is easy to update without redownloading everything. However it is *not* optimized to update daily. I only intend to update monthly. My backtesting and live trading framework will be different. E.g. for a trading system that trades daily bars, I will only download the required daily bars every day and not update the entire database for all tickers. For a day-trading system I will use screeners, which also do not require downloading all 6000+ stocks. In fact it would be very hard to constantly stream 6000+ stocks at the same time, if not impossible.\n",
+    "I will also make sure that it is easy to update without redownloading everything. However it is *not* optimized to update daily. I only intend to update monthly. My backtesting and live trading framework will be different. E.g. for a trading system that trades daily bars, I will only download the required daily bars every day and not update the entire database for all tickers. For a day-trading system I will use screeners, which also do not require downloading all 6000+ stocks. In would be very hard to constantly stream 6000+ stocks at the same time, if not impossible.\n",
     "\n",
-    "With a previous project I tried to convert tick quote data to quotes and then merge them with bars to get a realistic bid-ask spread. I have decided to not use quote data anymore. It is simply too expensive, cumbersome or simply impossible. I would have to download ALL tick data in order to get quotebars. Instead, I will just trade using 1-minute OHLC. When backtesting, I will assume a spread of 1 tick or a few cents. This is okay, because I simply will not trade HFT or systems with an average profit less than 0.3% for liquid stocks or less than 0.1% for liquid futures/CFDs. High frequency systems also won't work in Europe due to almost not having access to PFOF brokers. I also will avoid illiquid stocks. If I want a more realistic estimate, I will sample the bid-ask spread throughout the day. \n",
+    "With a previous project I tried to convert tick quote data to quotes and then merge them with bars to get a realistic bid-ask spread. I have decided to not use quote data anymore. It is simply too expensive, cumbersome or simply impossible. I would have to download all tick data in order to get quotebars, which will be several TBs. Instead, I will just trade using 1-minute OHLC. When backtesting, I will assume a spread of 1 tick or a few cents. This is okay, because I simply will not trade HFT or systems with an average profit less than 0.3% for liquid stocks or less than 0.1% for liquid futures/CFDs. High frequency systems also won't work in Europe due to almost not having access to PFOF brokers. I also will avoid illiquid stocks. If I want a more realistic estimate, I will sample the bid-ask spread throughout the day. \n",
     "\n",
     "I will organize my data in the following way (only folders and important files shown):\n",
     "\n",
@@ -34,15 +34,11 @@
     "│   │   ├── secret.txt\n",
     "│   ├── stockanalysis\n",
     "│   │   ├── raw\n",
-    "│   ├── sharadar\n",
-    "│   │   ├── raw\n",
-    "│   │   ├── processed\n",
-    "│   │   ├── secret.txt\n",
     "```\n",
     "\n",
     "The <code>market</code> folder will contain the market hours. All data will be stored in the corresponding directory based on the data vendor. Polygon is for stock/fundamental data. Stockanalysis is for stock renamings and Sharadar is for fundamentals*.  Raw data is never adjusted. When updating raw data, we should be able to just append it. Processed data is always adjusted which means it is usable by the backtester. The backtester should only use what is in the <code>processed</code> folders. The <code>secret.txt</code> files contain the API keys. All folders have to be created manually. \n",
     "\n",
-    "*\\*Fundamentals are something on the to do list. It will be a while before I implement that. However you can already take a look at <code>x_get_fundamentals.ipynb</code>.*\n",
+    "*\\*Fundamentals are something on the to do list. It will be a while before I implement that. However you can already take a look at the incomplete <code>x_get_fundamentals.ipynb</code>.*\n",
     "\n",
     "Because the rate limit for the free Polygon plan is quite low, you need at least the starter subscription (29 USD/month). They actually have a 20% discount for students.\n",
     "\n",
@@ -55,12 +51,13 @@
     "4. Add ETPs.\n",
     "5. Download adjustments.\n",
     "6. Download raw prices.\n",
-    "7. Data cleaning. **Postponed**\n",
+    "7. Data cleaning. **Postponed. But if you have solved this, feel free to do a PR or contact me!**\n",
     "8. Processing data.\n",
     "9. Renamings.\n",
     "10. Aggregate to higher timeframes.\n",
     "11. Some extra handy functions.\n",
-    "12. Using the data in practice.\n",
+    "12. Simulating point-in-time screening for day trading.\n",
+    "13. Playing around with the data.\n",
     "\n",
     "*Note: a data point at 15:59 with OHLC means that the open was at 15:59:00 and close at 16:00:00.*"
    ]
@@ -2221,139 +2218,6 @@
     "So we will loop and create an own version of a list of all tickers with start and end dates. This will include FB, which would not be the case if we only used the current date in <code>Tickers</code>. It would also include the old META ETF if it was a stock. This would be impossible to get without looping.\n",
     "\n",
     "We will take a short stop to retrieve the market hours. This is important if we want to loop through the trading days to retrieve the Polygon ticker list for each day."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 1.4 To be moved to other notebooks"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1.7 Ticker changes\n",
-    "We need a list of ticker renamings to merge data. E.g. FB and META price data has to be merged. Also when we get fundamentals, for some APIs we can only query by the most recent ticker. For example Sharadar and Tiingo. In fact, most data vendors only uses the most recent ticker, so you will not find FB. (This means that if a ticker is re-used, it is gone. Sharadar actually does have some survivorship bias, although small). In rare cases we do need point-in-time tickers, for example the historical borrowing rates for IBKR. \n",
-    "\n",
-    "We can loop through all tickers and query <code>Ticker Events</code> but this only works with non-delisted companies. And although you can infer it based on the ticker list by looking at whether the cik or figi has changed, that is very messy. Because a company can stay the same even if the ticker and cik/figi change. I actually did it, and it did found that it did not match the Polygon <code>Ticker Events</code>. Then I stumbled on [stockanalysis.com](https://stockanalysis.com/actions/changes/) where you can find all ticker changes for only 10 bucks a month. The first month is even free. \n",
-    "\n",
-    "After downloading and manipulating these, we will save all renaming to <code>raw/renamings.csv</code> which will contain the columns <code>['from', 'to', 'now', 'date']</code>. In the above example, 'from' will be AAA, 'to' will be BBB, and 'date' will be *the next trading day* after 2022-01-01. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "###\n",
-    "# Aggregate the csv's\n",
-    "all_ticker_changes = []\n",
-    "for file in os.listdir(DATA_PATH + \"../stockanalysis/raw/ticker_changes/\"):\n",
-    "    ticker_changes_year = pd.read_csv(DATA_PATH + \"../stockanalysis/raw/ticker_changes/\" + file, parse_dates=True, index_col=0, usecols=[\"Date\", \"Old\", \"New\"])\n",
-    "    all_ticker_changes.append(ticker_changes_year)\n",
-    "\n",
-    "ticker_changes = pd.concat(all_ticker_changes)\n",
-    "ticker_changes = pd.concat(all_ticker_changes)\n",
-    "ticker_changes.rename(columns={\"Old\": \"from\", \n",
-    "                               \"New\": \"to\"}, inplace=True)\n",
-    "ticker_changes.index.names = ['date']\n",
-    "ticker_changes.sort_index(inplace=True)\n",
-    "ticker_changes.to_csv(DATA_PATH + \"../stockanalysis/ticker_changes.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4347\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>from</th>\n",
-       "      <th>to</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2022-06-09</th>\n",
-       "      <td>FB</td>\n",
-       "      <td>META</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           from    to\n",
-       "date                 \n",
-       "2022-06-09   FB  META"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(len(ticker_changes))\n",
-    "ticker_changes[ticker_changes['from'] == \"FB\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are a whopping 4347 ticker changes from 2003 to now that we have to take care of. But at least this was very easy to get."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1.9 Updates\n",
-    "The steps for updating:\n",
-    "1. Update <code>END_DATE</code> and run the cells with ##### to import the functions\n",
-    "2. <code>market_hours.csv</code>: Run the cell with ### at section 1.2. Make sure the hard-coded <code>early_closes</code> variable is complete.\n",
-    "3. All raw ticker lists in the map <code>tickers/</code>: Run the 2 cells with ### in section 1.3.\n",
-    "4. <code>tickers_v1.csv</code>: Run the cell with ### in section 1.4.\n",
-    "5. <code>tickers_v2.csv</code>: Run the cells with ### in section 1.5 and 1.6.\n",
-    "6. <code>ticker_changes.csv</code>: Run the cell with ### in section 1.7 after updating the .csv files with the ticker changes in <code>stockanalysis/raw/ticker_changes</code>.\n",
-    "7. <code>tickers_v3.csv</code>: Run the cells with ### in section 1.8.\n",
-    "\n",
-    "The code is not optimized to update daily, neither is it necessary or even feasible because processing take very long. I only intend to update only once every month to compare real results to backtested results. But until I have a working strategy and money I will probably not update at all. "
    ]
   },
   {
