--- a/09_renamings.ipynb
+++ b/09_renamings.ipynb
@@ -5,7 +5,66 @@
    "metadata": {},
    "source": [
     "# 9.1 Merging ticker changes\n",
-    "In section 1.7 we have acquired the list of renamings. Now we will use them to merge our data. We have to be aware that it is possible for a ticker to used multiple times, so the <code>ticker_changes.csv</code> may contain multiple of the same tickers in the 'from' and 'to' column. \n",
+    "To get a list of ticker changes, We can loop through all tickers and query <code>Ticker Events</code> but this only works with non-delisted companies. And although you can infer it based on the ticker list by looking at whether the cik or figi has changed, that is very messy. Because a company can stay the same even if the ticker and cik/figi change. I actually did it, and it did found that it did not match the Polygon <code>Ticker Events</code>. Then I stumbled on [stockanalysis.com](https://stockanalysis.com/actions/changes/) where you can find all ticker changes for only 10 bucks a month. The first month is even free. You have to manually download them for each year and put them in the <code>stockanalysis/raw/ticker_changes/</code> folder.\n",
+    "\n",
+    "After merging those we will save the result to <code>raw/renamings.csv</code> which will contain the columns <code>['from', 'to', 'now', 'date']</code>."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils import get_tickers, get_market_dates, get_ticker_changes, get_market_calendar\n",
+    "from datetime import datetime, date, time\n",
+    "import mplfinance as mpf\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "DATA_PATH = \"../data/polygon/\"\n",
+    "END_DATE = date(2023, 9, 7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###\n",
+    "# Aggregate the csv's\n",
+    "all_ticker_changes = []\n",
+    "for file in os.listdir(DATA_PATH + \"../stockanalysis/raw/ticker_changes/\"):\n",
+    "    ticker_changes_year = pd.read_csv(DATA_PATH + \"../stockanalysis/raw/ticker_changes/\" + file, parse_dates=True, index_col=0, usecols=[\"Date\", \"Old\", \"New\"])\n",
+    "    all_ticker_changes.append(ticker_changes_year)\n",
+    "\n",
+    "ticker_changes = pd.concat(all_ticker_changes)\n",
+    "ticker_changes = pd.concat(all_ticker_changes)\n",
+    "ticker_changes.rename(columns={\"Old\": \"from\", \n",
+    "                               \"New\": \"to\"}, inplace=True)\n",
+    "ticker_changes.index.names = ['date']\n",
+    "ticker_changes.sort_index(inplace=True)\n",
+    "ticker_changes.to_csv(DATA_PATH + \"../stockanalysis/ticker_changes.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(len(ticker_changes))\n",
+    "ticker_changes[ticker_changes['from'] == \"FB\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are a whopping 4347 ticker changes from 2003 to now that we have to take care of. But at least this was very easy to get.\n",
+    "\n",
+    "Now we will use them to merge our data. We have to be aware that it is possible for a ticker to used multiple times, so the <code>ticker_changes.csv</code> may contain multiple of the same tickers in the 'from' and 'to' column. \n",
     "\n",
     "After processing the ticker changes we will create a <code>tickers_v5.csv</code> which will be our definitive ticker list. This contains a column 'tickers_old', which will containa list of (date_of_change, ticker) pairs. So if A changes to B on day 2, and B changes to C on day 5, tickers_old for D will contain [[2, A], [5, B]].\n",
     "\n",
@@ -20,24 +79,9 @@
     "            * All other rows will be merged such as \"start_date\". For identifiers such as FIGI we will take the last available value. For the ID we will keep the original. If we do not do this, we might run into problems with identical IDs.\n",
     "            * The row of the old ticker will be deleted\n",
     "            * **We need to restart the loop!** If we don't the following can happen: Let's assume that a ticker was renamed from A -> B -> C -> D but that the order in which it appears in our ticker list is C, D, A, B. Using our loop, C gets merged with D. Then the loop checks D, which has no renamings. Then A gets merged with B. Then B gets merged with C, however that is incorrect! B should be merged with the new D, which contains C. Any double+ renamings have the risk of being in the 'wrong order'.\n",
+    "            * Of course we must not forget that there can be adjustments on day 1 of the ticker change. There should be laws to prohibit this.\n",
     "\n",
     "Note: if a ticker A goes OTC and then comes back and changes to B, then we will have two files: one of the A before OTC and the A+B after OTC named B."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import get_tickers, get_market_dates, get_ticker_changes, get_market_calendar\n",
-    "from datetime import datetime, date, time\n",
-    "import mplfinance as mpf\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import os\n",
-    "DATA_PATH = \"../data/polygon/\"\n",
-    "END_DATE = date(2023, 9, 7)"
    ]
   },
   {
@@ -125,7 +169,7 @@
     "                from_[['open', 'high', 'low', 'close']] = from_[['open', 'high', 'low', 'close']].multiply(adjustment_factor)\n",
     "                from_['volume'] = from_['volume'].divide(adjustment_factor)\n",
     "                from_ = round(from_, 4)\n",
-    "                from_['volume'] = from_['volume'].astype(int)\\\n",
+    "                from_['volume'] = from_['volume'].astype(int)\n",
     "            \n",
     "            # ROUNDING\n",
     "            if len(split) > 0 or len(dividend) > 0:\n",
@@ -139,7 +183,7 @@
     "            adjustments = adjustments[(adjustments.index == start_data_to)]\n",
     "            assert len(adjustments) == 0\n",
     "\n",
-    "        pd.concat([from_, to]).to_parquet(DATA_PATH + f\"processed/m1/{new_id}.parquet\", engine=\"fastparquet\", row_group_offsets=25000)\n",
+    "        pd.concat([from_, to]).to_parquet(DATA_PATH + f\"processed/m1/{id_to}.parquet\", engine=\"fastparquet\", row_group_offsets=25000)\n",
     "        # pd.concat([from_, to]).to_parquet(DATA_PATH + f\"processed/m1/{new_id}.parquet\", engine=\"pyarrow\", compression = 'brotli', row_group_size = 25000)\n",
     "\n",
     "        # Delete old ticker from ticker list. You can also remove the files, but that is not necessary. In backtesting you will always loop over the ticker list and not over de files in the folder.\n",
