--- a/10_aggregate.ipynb
+++ b/10_aggregate.ipynb
@@ -40,6 +40,7 @@
     "                                    'high': 'max', \n",
     "                                    'low': 'min',\n",
     "                                    'close': 'last',\n",
+    "                                    'close_original': 'last',\n",
     "                                    'volume': 'sum',\n",
     "                                    'tradeable': 'first',\n",
     "                                    'halted': 'first'})\n",
@@ -56,6 +57,7 @@
     "                                 'high': 'max', \n",
     "                                 'low': 'min',\n",
     "                                 'close': 'last',\n",
+    "                                 'close_original': 'last',\n",
     "                                 'volume': 'sum',\n",
     "                                 'tradeable': 'max',\n",
     "                                 'halted': 'min'})\n",
