--- a/11_extra_functions.ipynb
+++ b/11_extra_functions.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extra functions"
+    "# Extra functions\n",
+    "Some extra functions useful for the future."
    ]
   },
   {
@@ -57,7 +58,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_data(ticker_or_id, start=date(2000, 1, 1), end=date(2100, 1, 1), timeframe=\"daily\", regular_hours_only=False, location='processed'):\n",
+    "def get_data(\n",
+    "    ticker_or_id,\n",
+    "    start=date(2000, 1, 1),\n",
+    "    end=date(2100, 1, 1),\n",
+    "    timeframe=\"daily\",\n",
+    "    regular_hours_only=False,\n",
+    "    location=\"processed\",\n",
+    "    columns=[\"open\", \"high\", \"low\", \"close\", \"close_original\", \"volume\", \"tradeable\", \"halted\"],\n",
+    "):\n",
     "    \"\"\"Retrieves the data from our database\n",
     "\n",
     "    Args:\n",
@@ -67,6 +76,7 @@
     "        timeframe (str, optional): 1 for 1-minute, 5 for 5-minute. Defaults to daily bars.\n",
     "        regular_hours_only (bool, optional): Whether we need to remove extended hours. Defaults to False.\n",
     "        location (str): 'processed' or 'raw'. Defaults to 'processed'.\n",
+    "        columns (list): list of columns. Defaults to all.\n",
     "\n",
     "    Returns:\n",
     "        DataFrame: the output\n",
@@ -77,19 +87,28 @@
     "        id = ticker_or_id\n",
     "    else:\n",
     "        id = get_id(ticker_or_id, timeframe)\n",
-    "        \n",
+    "\n",
     "    # Read data\n",
     "    if timeframe in [1, 5]:\n",
-    "        dataset = pq.ParquetDataset(DATA_PATH + f'{location}/m{timeframe}/{id}.parquet', filters=[(\"datetime\", \">=\", start), (\"datetime\", \"<=\", end)] )\n",
+    "        dataset = pq.ParquetDataset(\n",
+    "            POLYGON_DATA_PATH + f\"{location}/m{timeframe}/{id}.parquet\",\n",
+    "            filters=[(\"datetime\", \">=\", start), (\"datetime\", \"<=\", end)],\n",
+    "        )\n",
     "    else:\n",
-    "        dataset = pq.ParquetDataset(DATA_PATH + f'{location}/d1/{id}.parquet', filters=[(\"datetime\", \">=\", start), (\"datetime\", \"<\", end + timedelta(days=1))] )\n",
-    "    df = dataset.read().to_pandas()\n",
-    "    \n",
+    "        dataset = pq.ParquetDataset(\n",
+    "            POLYGON_DATA_PATH + f\"{location}/d1/{id}.parquet\",\n",
+    "            filters=[\n",
+    "                (\"datetime\", \">=\", start),\n",
+    "                (\"datetime\", \"<\", end + timedelta(days=1)),\n",
+    "            ],\n",
+    "        )\n",
+    "    df = dataset.read(columns=[\"datetime\"] + columns).to_pandas()\n",
+    "\n",
     "    # Remove extended hours if necessary\n",
     "    if regular_hours_only and (timeframe in [1, 5]):\n",
     "        return remove_extended_hours(df)\n",
     "    else:\n",
-    "        return df "
+    "        return df"
    ]
   },
   {
