processing now only uses tickers_v3 instead of all raw files, preventing processing funds

--- a/02_market_hours.ipynb
+++ b/02_market_hours.ipynb
@@ -346,7 +346,7 @@
     "        Date: the trading date\n",
     "    \"\"\"\n",
     "    trading_days = get_market_dates()\n",
-    "    if dt > trading_days[-1]:\n",
+    "    if dt < trading_days[0] or dt >= trading_days[-1]:\n",
     "        print(\"Out of range! Returning input.\")\n",
     "        return dt\n",
     "    while dt not in trading_days:\n",
@@ -363,7 +363,7 @@
     "        Date: the trading date\n",
     "    \"\"\"\n",
     "    trading_days = get_market_dates()\n",
-    "    if dt < trading_days[-1]:\n",
+    "    if dt <= trading_days[0] or dt > trading_days[-1]:\n",
     "        print(\"Out of range! Returning input.\")\n",
     "        return dt\n",
     "    while dt not in trading_days:\n",
