--- a/13_backtesting.ipynb
+++ b/13_backtesting.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import get_data, get_id\n",
+    "from utils import get_data, get_id, last_trading_date_before_equal, get_market_dates, first_trading_date_after\n",
     "from scipy import stats\n",
     "from datetime import datetime, date\n",
     "import numpy as np\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1014,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1140,15 +1140,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TO DO: Add the close_original back to the data. Rerun everything."
+    "# 13.2 S&P500 vs TOP500\n",
+    "There should be small differences between the top 500 most liquid stocks and the S&P500. Although for fair comparison we should take the equally weighted S&P500."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_top_n_liquid(day, n=500):\n",
+    "    \"\"\"Retrieve the top liquid N stocks. If no cache exists, calculate them.\n",
+    "\n",
+    "    Args:\n",
+    "        day (date): the date to query\n",
+    "        n (int, optional): the amount of stocks to query. Defaults to 500.\n",
+    "\n",
+    "    Returns:\n",
+    "        list: list of IDs\n",
+    "    \"\"\"\n",
+    "    if not os.path.isfile(DATA_PATH + f'processed/cache/top_{n}_liquid.json'):\n",
+    "        store_top_n_liquid(n)\n",
+    "        \n",
+    "    with open(DATA_PATH + f'processed/cache/top_{n}_liquid.json', 'r') as f:\n",
+    "        data = json.load(f)\n",
+    "\n",
+    "    dates = list(data.keys())\n",
+    "    date_to_query = max(list(filter(lambda x: x <= day.isoformat(), dates)) )\n",
+    "    return date_to_query, data[date_to_query]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the start and end trading dates in a quarter\n",
+    "quarter_start = [date(2019, 1, 1)]\n",
+    "quarter_end = []\n",
+    "for day in pd.date_range(date(2019, 1, 1), date(2023, 9, 1), freq='Q'):\n",
+    "    day = day.to_pydatetime().date()\n",
+    "    quarter_end.append(last_trading_date_before_equal(day))\n",
+    "    quarter_start.append(first_trading_date_after(last_trading_date_before_equal(day)))\n",
+    "quarter_start = [day for day in quarter_start if day < quarter_end[-1]] # Filter such that no start dates are after the end dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-01-01 to 2019-03-29\n",
+      "2019-04-01 to 2019-06-28\n",
+      "2019-07-01 to 2019-09-30\n",
+      "2019-10-01 to 2019-12-31\n",
+      "2020-01-02 to 2020-03-31\n",
+      "2020-04-01 to 2020-06-30\n",
+      "2020-07-01 to 2020-09-30\n",
+      "2020-10-01 to 2020-12-31\n",
+      "2021-01-04 to 2021-03-31\n",
+      "2021-04-01 to 2021-06-30\n",
+      "2021-07-01 to 2021-09-30\n",
+      "2021-10-01 to 2021-12-31\n",
+      "2022-01-03 to 2022-03-31\n",
+      "2022-04-01 to 2022-06-30\n",
+      "2022-07-01 to 2022-09-30\n",
+      "2022-10-03 to 2022-12-30\n",
+      "2023-01-03 to 2023-03-31\n",
+      "2023-04-03 to 2023-06-30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Loop over all quarters, aggregate and average.\n",
+    "for date_start, date_end in zip(quarter_start, quarter_end):\n",
+    "    print(f\"{date_start} to {date_end}\")\n"
+   ]
   }
  ],
  "metadata": {
