--- a/08_process.ipynb
+++ b/08_process.ipynb
@@ -1786,23 +1786,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ACBI\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tickers_v3 = get_tickers(v=3)\n",
     "for index, row in tickers_v3.iterrows():\n",
     "    id = row['ID']\n",
     "    ticker = row[\"ticker\"] # Remove date and parquet extension\n",
-    "    bars = pd.read_parquet(f\"{DATA_PATH}raw/m1/{id}.parquet\")\n",
+    "    try:\n",
+    "        bars = pd.read_parquet(f\"{DATA_PATH}raw/m1/{id}.parquet\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"There is no data for {id}\")\n",
+    "        continue\n",
     "    \n",
     "    # CLEANING\n",
     "    # I do not have tick data yet. However this is how you would do it if you got a csv of the cleaned bars only.\n",
@@ -1840,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1872,8 +1868,11 @@
     "\n",
     "for index, row in tickers_v3.iterrows():\n",
     "    id = row['ID'] # Remove parquet extension\n",
-    "\n",
-    "    dataset = pq.ParquetFile(DATA_PATH + f\"processed/m1/{id}.parquet\")\n",
+    "    try:\n",
+    "        dataset = pq.ParquetFile(DATA_PATH + f\"processed/m1/{id}.parquet\")\n",
+    "    except FileNotFoundError:\n",
+    "        print(f\"There is no data for {id}\")\n",
+    "        continue\n",
     "\n",
     "    # Reading metadata (statistics) of first and last row group. This avoids reading the entire file.\n",
     "    # Reading everything from the datetime column and getting first/last row took 8 minutes. This took less than 50 sec.\n",
@@ -2329,6 +2328,13 @@
     "    d1.to_parquet(DATA_PATH + f\"processed/d1/{file}\", engine=\"fastparquet\", row_group_offsets=25000)\n",
     "    #d1.to_parquet(DATA_PATH + f\"processed/d1/{file}\", engine=\"pyarrow\", compression = 'brotli', row_group_size = 25000)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
